Fix: Atualização dos testes depois das mudanças em attack